-When the sync login fails, don't force a restore from backup on the next sync.
-Display progress bar when calculating long statistics.
-Reworked plugin dialog. Plugins can now also be installed through the GUI.
-Fix playing of sound files containing unicode characters. Unfortunately, due
 to a bug with Qt under Windows, this only works on Linux (reported by Barbara).
-Copy media directory when doing 'Save as..' (reported by Henrik).
-example plugin to lock down the UI (requested by Eugene Campbell).
-Bug fix when importing xml files with anonymous ids after importing an
 anynymous id file just before that (reported by Scott Youngman).
-Fix searching for [ and ] (reported by Scott Youngman).
-If you resume your pc from hibernation in the morning, the new day's cards are
 now added more quickly to your queue. This also makes sure there is more data
 available to calculate the past schedule.
-Make newlines outside of tables and latex tags work again (reported by Gnome)
-Fix bug converting existing cards to Cloze cards (reported by Jin Hale).
-'Untagged' now always shows up last in the tag tree, even if there are tags
 starting with a number
-For map cards, the answer is now again labeled 'Aswer:' as opposed to
 'Question:'


MNEMOSYNE 2.0

More than three years in the making, this is essentially a complete rewrite of
the old 1.x codebase, with a new, clean design, consisting of components that
can be swapped in and out very easily, which allows plugin writers maximum
flexibility.

Major user-visible changes:

-Support for what is called card types. The main user visible changes are that
 editing a vice versa card or three sided card will automatically update the
 related card. There is also support for N-sided cards.
-Whereas in Mnemosyne 1.x, a card could belong to only one category, now a
 card can have multiple tags. Tags can also be organised in a hierachy, with
 '::' separating the levels of the hierachy.