@@ -572,10 +572,29 @@ class SQLite(Database, SQLiteSync, SQLiteMedia, SQLiteLogging,
         if self.syncing:
             return
         current_criterion = self.database().current_criterion()
+        saved_criterion = None
         for criterion in self.criteria():
-            if criterion == current_criterion:
-                criterion.tag_added(tag)
-                self.update_criterion(criterion)
+            if criterion == current_criterion and \
+                criterion.id != "__DEFAULT__":
+                saved_criterion = criterion
+                break
+        if not saved_criterion:
+            criteria_to_activate_tag_in = [current_criterion]
+        else:
+            answer = self.main_widget().show_question(\
+                _("Make tag '%s' active in saved set '%s'?") % \
+                (tag.name, saved_criterion.name), _("Yes"), _("No"), "")
+            if answer == 1:  # No.
+                criteria_to_activate_tag_in = []
+            else:
+                criteria_to_activate_tag_in = \
+                    [current_criterion, saved_criterion]
+        for criterion in self.criteria():
+            if criterion in criteria_to_activate_tag_in:
+                criterion.active_tag_added(tag)
+            else:
+                criterion.forbidden_tag_added(tag)
+            self.update_criterion(criterion)
         # Strictly speaking, we should reapply the default criterion here,
         # just as we do in delete_tag. However, the behaviour for new tags is
         # they are enabled by default, so we don't reapply the criterion and
@@ -1004,10 +1023,32 @@ class SQLite(Database, SQLiteSync, SQLiteMedia, SQLiteLogging,
         self.log().added_card_type(card_type)
         # When syncing, don't bother to check for updates to criteria here, as
         # there will be separate log events coming later to deal with this.
+        # (generated by 'update_criterion' a few lines below).
         if self.syncing:
             return
+        current_criterion = self.database().current_criterion()
+        saved_criterion = None
         for criterion in self.criteria():
-            criterion.card_type_added(card_type)
+            if criterion == current_criterion and \
+                criterion.id != "__DEFAULT__":
+                saved_criterion = criterion
+                break
+        if not saved_criterion:
+            criteria_to_activate_card_type_in = [current_criterion]
+        else:
+            answer = self.main_widget().show_question(\
+                _("Make new card type active in saved set '%s'?") % \
+                (saved_criterion.name,), _("Yes"), _("No"), "")
+            if answer == 1:  # No.
+                criteria_to_activate_card_type_in = []
+            else:
+                criteria_to_activate_card_type_in = \
+                    [current_criterion, saved_criterion]
+        for criterion in self.criteria():
+            if criterion in criteria_to_activate_card_type_in:
+                criterion.active_card_type_added(card_type)
+            else:
+                criterion.forbidden_card_type_added(card_type)
             self.update_criterion(criterion)
 
     def card_type(self, id, is_id_internal):
